--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "dependencies": {
     "@electron-addons/electron-forge-maker-nsis": "^7.0.2",
     "@electron-forge/plugin-fuses": "^7.2.0",
+    "@electron/fuses": "^1.8.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.15",
